# email-triage-openenv

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
env/: __init__.py  models.py
openenv-email-triage/: Dockerfile  README.md  openenv.yaml  validate.py
openenv-email-triage/env/: data.py  environment.py
openenv-email-triage/tasks/: graders.py
openenv-email-triage/tests/: test_environment.py
server/: __init__.py  app.py
tasks/: __init__.py  graders.py
